--- a/index.html
+++ b/index.html
@@ -16,5 +16,6 @@
         <li><a href="#">About</a></li>
         <li><a href="#">Contact</a></li>
     </ul>
+    <p>i don't know what i'm doing here. Lmao :v</p>
 </body>
 </html>
