Update index.html again

--- a/index.html
+++ b/index.html
@@ -16,6 +16,6 @@
         <li><a href="#">About</a></li>
         <li><a href="#">Contact</a></li>
     </ul>
-    <p>i don't know what i'm doing here. Lmao :v</p>
+    <p>i don't know what i'm doing here. Lmao :v. I'll delete when done.</p>
 </body>
 </html>
