header bookstore (html & css)

--- a/index.html
+++ b/index.html
@@ -1,24 +1,109 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="vi">
 <head>
     <meta charset="UTF-8">
-    <title>Web basic</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <title>Just a litle bookstore</title>
+    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/remixicon@4.5.0/fonts/remixicon.min.css">
 </head>
 <body>
+<header class="hero-header">
 
-    <h1>Welcome to my website</h1>
+    <!--    hero navbar-->
+    <nav class="navbar">
+        <div class="navbar-left">
+            <div class="logo">
+                <img src="images/logo.png" alt="logo">
+            </div>
+            <ul class="nav-links">
+                <li><a href="index.html">Home</a></li>
+                <li><a href="#">Books</a></li>
+                <li><a href="#">Story</a></li>
+                <li><a href="#">Art</a></li>
+                <li><a href="#">About us</a></li>
+            </ul>
+        </div>
 
-    <p>This is a basic website template.</p>
+        <div class="navbar-right">
+            <div class="shopping-cart">
+                <i class="ri-shopping-bag-line"></i>
+            </div>
 
-    <h2>Navigation</h2>
-    <ul>
-        <li><a href="#">Home</a></li>
-        <li><a href="#">About</a></li>
-        <li><a href="#">Contact</a></li>
-    </ul>
-    <p>i don't know what i'm doing here. Lmao :v. I'll delete when done.</p>
-<p>I'll make a conflict in here</p>
-    <a href="#">aaa</a>
+            <div class="search-bar">
+                <input type="text" placeholder="Find your book">
+                <button type="submit"><i class="ri-search-line"></i></button>
+            </div>
+
+            <div class="menu-icon" id="menu-icon">
+                <i class="ri-menu-4-line"></i>
+            </div>
+        </div>
+    </nav>
+
+    <!--    Hero section-->
+    <section class="hero-section" id="hero-section">
+        <div class="container">
+
+            <!--content left-->
+            <div class="hero-content">
+                <h1>Just a little Book Store</h1>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+                    Ad assumenda corporis dignissimos dolorum et eveniet,
+                    excepturi fuga id illum odit porro rem suscipit tempora vel vero.
+                    Rerum, sunt, suscipit. Tempora!</p>
+                <div class="button-container">
+                    <a href="#" class="read-more-button">
+                        Read more
+                        <span class="arrow"></span>
+                    </a>
+                </div>
+
+                <!--Socical link-->
+                <div class="social-links">
+                    <a href="#"><i class="ri-facebook-circle-fill"></i></a>
+                    <a href="#"><i class="ri-twitter-fill"></i></a>
+                    <a href="#"><i class="ri-instagram-fill"></i></a>
+                </div>
+            </div>
+
+            <!--SLider-->
+            <div class="slider">
+                <div class="slider-background"></div>
+                <div class="slider-wrapper">
+                    <div class="slider-container">
+                        <img src="images/img1.png" alt="Book" class="slider-image">
+                        <img src="images/img2.png" alt="Book" class="slider-image">
+                        <img src="images/img3.png" alt="Book" class="slider-image">
+                        <img src="images/img4.png" alt="Book" class="slider-image">
+                        <img src="images/img5.png" alt="Book" class="slider-image">
+                    </div>
+                </div>
+
+                <div class="book-details">
+                    <h3>Once upon a time</h3>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
+                    <span class="price">15.50$</span>
+                </div>
+
+                <div class="slider-nav">
+                    <i class="ri-arrow-left-s-line" id="left-arrow"></i>
+                    <i class="ri-arrow-right-s-line" id="right-arrow"></i>
+                </div>
+            </div>
+
+        </div>
+
+    </section>
+
+</header>
+<main>
+
+</main>
+<footer>
+</footer>
+
+<script src="script.js"></script>
 </body>
-<a>aaa</a>
 </html>
