--- a/index.html
+++ b/index.html
@@ -82,9 +82,9 @@
                 </div>
 
                 <div class="book-details">
-                    <h3>Once upon a time</h3>
+                    <h3 id="image-title">Once upon a time</h3>
                     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
-                    <span class="price">15.50$</span>
+                    <span class="price" id="image-price">15.50$</span>
                 </div>
 
                 <div class="slider-nav">
@@ -92,15 +92,26 @@
                     <i class="ri-arrow-right-s-line" id="right-arrow"></i>
                 </div>
             </div>
-
         </div>
-
     </section>
-
 </header>
-<main>
 
-</main>
+<!--Story section-->
+<section class="our-story" id="story-section">
+    <div class="container">
+        <div class="story-image">
+            <img src="images/store.png" alt="#">
+        </div>
+        <div class="story-content">
+            <h2>About my Bookstore</h2>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+                Atque earum eligendi eos facilis minima, natus nihil veritatis voluptatum?
+                Adipisci aperiam facere inventore iusto maiores neque nisi quisquam,
+                rem repellendus voluptate.</p>
+            <a href="#" class="btn2">Learn more <i class="ri-arrow-right-line"></i></a>
+        </div>
+    </div>
+</section>
 <footer>
 </footer>
 
