add flash sale, author

--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
             </div>
             <ul class="nav-links">
                 <li><a href="index.html">Home</a></li>
-                <li><a href="#">Books</a></li>
                 <li><a href="#">Story</a></li>
+                <li><a href="#">Book</a></li>
                 <li><a href="#">Art</a></li>
                 <li><a href="#">About us</a></li>
             </ul>
@@ -110,6 +110,191 @@
                 rem repellendus voluptate.</p>
             <a href="#" class="btn2">Learn more <i class="ri-arrow-right-line"></i></a>
         </div>
+    </div>
+</section>
+
+<!--Book section-->
+<section class="book-section">
+    <div class="section-header">
+        <h2>New release</h2>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. At maxime minima quo tempora unde? Aut est hic illo
+            nihil odio,
+            omnis perferendis quae quod repellendus, repudiandae saepe sapiente tempora!
+            Perspiciatis.</p>
+    </div>
+    <div class="book-container">
+        <div class="book-card">
+            <img src="images/book1.png">
+            <h3>The Book of Tea</h3>
+            <span class="price">150$</span>
+        </div>
+        <div class="book-card">
+            <img src="images/book2.png">
+            <h3>The Herb Witch Princess</h3>
+            <span class="price">150$</span>
+        </div>
+        <div class="book-card">
+            <img src="images/book3.png">
+            <h3>Around The Moon</h3>
+            <span class="price">150$</span>
+        </div>
+        <div class="book-card">
+            <img src="images/book4.png">
+            <h3>The Complete Novel Of Jane Austen</h3>
+            <span class="price">150$</span>
+        </div>
+        <div class="book-card">
+            <img src="images/book5.png">
+            <h3>The Great Gatsby</h3>
+            <span class="price">150$</span>
+        </div>
+    </div>
+</section>
+
+<!--Find book section-->
+<section class="find-section">
+    <div class="book-gallery">
+        <div class="book-item">
+            <img src="images/find1.png">
+        </div>
+        <div class="book-item">
+            <img src="images/find2.png">
+        </div>
+        <div class="book-item">
+            <img src="images/find3.png">
+        </div>
+        <div class="book-item">
+            <img src="images/find4.png">
+        </div>
+    </div>
+
+    <div class="book-info">
+        <h2>Find Your Favorite Books Here</h2>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+            A ab amet blanditiis commodi,
+            deleniti dolore enim esse et maiores maxime minus modi nemo,
+            nisi nulla quae quo reiciendis repudiandae voluptatibus.</p>
+        <div class="book-stats">
+            <div class="stat">
+                <p>80</p>
+                <span>Books Best seller</span>
+            </div>
+            <div class="stat">
+                <p>80</p>
+                <span>Books Upcoming</span>
+            </div>
+            <div class="stat">
+                <p>80</p>
+                <span>Books's today</span>
+            </div>
+        </div>
+        <div class="button-container">
+            <a href="#" class="read-more-button">
+                Read more
+                <span class="arrow"></span>
+            </a>
+        </div>
+    </div>
+</section>
+
+
+<!--Flash sale-->
+<section class="flash-sale">
+    <div class="flash-sale-left">
+        <h2>Flash Sale</h2>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+            Ad alias atque consectetur dignissimos dolor est exercitationem laudantium
+            nulla odio perspiciatis,
+        </p>
+        <div class="countdown">
+            <div class="time-box">
+                <span class="number">05</span>
+                <span class="number">Days</span>
+            </div>
+            <div class="time-box">
+                <span class="number">08</span>
+                <span class="number">Hours</span>
+            </div>
+            <div class="time-box">
+                <span class="number">35</span>
+                <span class="number">Mins</span>
+            </div>
+            <div class="time-box">
+                <span class="number">12</span>
+                <span class="number">Secs</span>
+            </div>
+        </div>
+    </div>
+
+    <div class="flash-sale-right">
+        <article class="book">
+            <img src="images/find1.png">
+            <div class="book-info">
+                <span class="discount">28% off</span>
+                <h3>Once Upon a Time</h3>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+                    Adipisci, reiciendis repellendus sint vitae!
+                    Commodi, deleniti ipsa nostrum odit pariatur rerum ut.</p>
+                <span class="price">130$ <del>260$</del></span>
+            </div>
+        </article>
+
+        <article class="book">
+            <img src="images/find1.png">
+            <div class="book-info">
+                <span class="discount">28% off</span>
+                <h3>The Lord Of The Ring: Two Towers</h3>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+                    Adipisci, reiciendis repellendus sint vitae!
+                    Commodi, deleniti ipsa nostrum odit pariatur rerum ut.</p>
+                <span class="price">130$ <del>260$</del></span>
+            </div>
+        </article>
+    </div>
+</section>
+
+
+<!--Author-->
+<section class="author-section">
+    <h2>Famous Authors</h2>
+    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Architecto assumenda debitis distinctio dolorem eius itaque molestias nobis omnis possimus, quis reiciendis repudiandae? A autem consectetur cum debitis facere labore, voluptates!</p>
+    <div class="author-list">
+        <div class="author-item">
+            <img src="images/author1.webp">
+            <h4>William Shakespare</h4>
+            <span> 32 Published</span>
+        </div>
+        <div class="author-item">
+            <img src="images/author2.jpg">
+            <h4>Leo Tolstoy</h4>
+            <span> 32 Published</span>
+        </div>
+        <div class="author-item">
+            <img src="images/author3.jpg">
+            <h4>Stephen King</h4>
+            <span> 32 Published</span>
+        </div>
+        <div class="author-item">
+            <img src="images/author4.jpg">
+            <h4>Virginia Woolf</h4>
+            <span> 32 Published</span>
+        </div>
+        <div class="author-item">
+            <img src="images/author5.webp">
+            <h4>JR Tolkien</h4>
+            <span> 32 Published</span>
+        </div>
+        <div class="author-item">
+            <img src="images/author6.jpg">
+            <h4> C. S. Lewis</h4>
+            <span> 32 Published</span>
+        </div>
+        <div class="author-item">
+            <img src="images/author7.jpeg">
+            <h4>J. K. Rowling</h4>
+            <span> 32 Published</span>
+        </div>
+
     </div>
 </section>
 <footer>
