--- a/test.html
+++ b/test.html
@@ -5,7 +5,9 @@
     <title>Test pull request</title>
 </head>
 <body>
-<h1>Test pull request on github</h1>
+<h1>JavaScript</h1>
+<button type="button" onclick="myFunction()">click here!</button>
 
+<script src="script.js"></script>
 </body>
 </html>
