add responsive in navbar

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             <div class="logo">
                 <img src="images/logo.png" alt="logo">
             </div>
-            <ul class="nav-links">
+            <ul class="nav-links" id="nav-links">
                 <li><a href="index.html">Home</a></li>
                 <li><a href="#">Story</a></li>
                 <li><a href="#">Book</a></li>
@@ -257,7 +257,9 @@
 <!--Author-->
 <section class="author-section">
     <h2>Famous Authors</h2>
-    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Architecto assumenda debitis distinctio dolorem eius itaque molestias nobis omnis possimus, quis reiciendis repudiandae? A autem consectetur cum debitis facere labore, voluptates!</p>
+    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Architecto assumenda debitis
+        distinctio dolorem eius itaque molestias nobis omnis possimus, quis reiciendis repudiandae?
+        A autem consectetur cum debitis facere labore, voluptates!</p>
     <div class="author-list">
         <div class="author-item">
             <img src="images/author1.webp">
